Bump spotless version to support java 21